--- a/source/index.html
+++ b/source/index.html
@@ -74,16 +74,19 @@
               <li class="download-links__list-item">
                 <a class="download-links__link download-links__link--apple" href="https://itunes.apple.com/ru/store">
                   <span class="visually-hidden">Apple</span>
+                  <img src="img/logo-apple.svg" alt="Apple" width="46" height="56">
                 </a>
               </li>
               <li class="download-links__list-item">
                 <a class="download-links__link download-links__link--android" href="https://play.google.com/store/apps?hl=ru">
                   <span class="visually-hidden">Android</span>
+                  <img src="img/logo-android.svg" alt="Android" width="42" height="47">
                 </a>
               </li>
               <li class="download-links__list-item">
                 <a class="download-links__link  download-links__link--windows" href="https://www.microsoft.com/ru-ru/store/appsvnext/windows-phone">
                   <span class="visually-hidden">Windows</span>
+                  <img src="img/logo-microsoft.svg" alt="Windows" width="43" height="41">
                 </a>
               </li>
             </ul>
